...
        var id: String {
            rawValue
        }

        var label: String {
            switch self {
            case .file: "File"
            case .edit: "Edit"
            case .insert: "Insert"
            case .card: "Card"
            case .view: "View"
            }
        }
...
